--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "alura-node": "file:",
     "dotenv": "^16.0.3",
     "express": "^4.17.3",
-    "mongoose": "^6.2.6"
+    "mongoose": "^6.2.6",
+    "mongoose-autopopulate": "^1.1.0"
   }
 }
